[testclean] Test cleanup through intellij