@@ -76,7 +76,7 @@ public class TestBetterSQLException {
 
 		message = new BetterSQLException(
 			"Hibernate: select this_.BPB_ID as BPB1_157_1_, this_.LOG_DATE as LOG2_157_1_, this_.LOG_MODULE as LOG3_157_1_, this_.LOG_TIME as LOG4_157_1_, this_.LOG_USER as LOG5_157_1_, this_.TCN as TCN157_1_, this_.ROS_ID as ROS7_157_1_, this_.BAD_ID as BAD14_157_1_, this_.BPB_CODE as BPB8_157_1_, this_.BPB_INVOERBAAR as BPB9_157_1_, this_.BOP_ID as BOP15_157_1_, this_.BPB_OMSCHRIJVING as BPB10_157_1_, this_.BPB_SUBJECTIEF as BPB11_157_1_, this_.BPB_UNIEK as BPB12_157_1_, this_.BPB_VAST_OMS as BPB13_157_1_, chartanswe2_.BAD_ID as BAD1_46_0_, chartanswe2_.LOG_DATE as LOG2_46_0_, chartanswe2_.LOG_MODULE as LOG3_46_0_, chartanswe2_.LOG_TIME as LOG4_46_0_, chartanswe2_.LOG_USER as LOG5_46_0_, chartanswe2_.TCN as TCN46_0_, chartanswe2_.ROS_ID as ROS7_46_0_, chartanswe2_.BAD_CODE as BAD8_46_0_, chartanswe2_.BAD_DOMEIN as BAD9_46_0_, chartanswe2_.BAD_VAST as BAD10_46_0_, chartanswe2_.BAD_LENGTH as BAD11_46_0_, chartanswe2_.BAD_MAXVALUE as BAD12_46_0_, chartanswe2_.BAD_MINVALUE as BAD13_46_0_, chartanswe2_.BAD_WNW as BAD14_46_0_, chartanswe2_.BAD_SCALE as BAD15_46_0_, chartanswe2_.BAD_SOORT as BAD16_46_0_ from BAE_PUNT_BEPALINGEN this_, BAE_ANTWOORD_DOMEINEN chartanswe2_ where this_.BAD_ID=chartanswe2_.BAD_ID(+) and this_.BPB_CODE=? and this_.ROS_ID=?;", //
-			new Object[]{"cccc", new Integer(38976)}, 2, new SQLException()).getMessage();
+			new Object[]{"cccc", Integer.valueOf(38976)}, 2, new SQLException()).getMessage();
 
 
 		Assert
